# Telegram-Hackathon-Bot

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  fetch_and_store.py  pyproject.toml  start.sh  telegram-bot.py  telegram-channel-bot.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-main-build-test-push.yml  ci-pr-build-test.yml  deploy.yml  docker.yml
adapters/: devfolio.py  devpost.py  dorahacks.py  hack2skill.py  kaggle.py  kaggle_adapter.py  mlh.py  unstop.py
backend/: crud.py  db.py  init_db.py  models.py  schemas.py
tests/: conftest.py  test_fetch_and_store.py  test_schemas.py  test_telegram_channel_bot.py
