[project]
name = "hackradar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.13.4",
    "cloudscraper>=1.2.71",
    "discord.py>=2.3.0",
    "kaggle>=1.8.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=22.6",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
